test/src/e2e_vm_tests/test_programs/should_fail/asm_unrecognized_opcode/src/main.sw
library;

pub fn test() {
    asm (r1: 0, r2: 0, r3: 0) {
        blobbb r1 r2 r3;
    };

    asm (r1: 0, r2: 0, r3: 0) {
        modd r1 r2 r3;
    };

    asm (r1: 0, r2: 0, r3: 0) {
        ttllyunknwn r1 r2 r3;
    };
}
